--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,9 +7,11 @@
         mc:Ignorable="d"
         Title="BMI Calculator" Height="450" Width="800">
     <Grid>
-        <Button x:Name="calculateButton" Content="Calculate BMI" HorizontalAlignment="Left" Margin="323,289,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="heightText" HorizontalAlignment="Left" Height="23" Margin="77,176,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="weightText" HorizontalAlignment="Left" Height="23" Margin="506,176,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="calculateButton" Content="Calculate BMI" HorizontalAlignment="Left" Margin="62,194,0,0" VerticalAlignment="Top" Width="74" Click="calculateButton_Click"/>
+        <TextBox x:Name="heightText" HorizontalAlignment="Left" Height="23" Margin="37,40,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="weightText" HorizontalAlignment="Left" Height="23" Margin="91,86,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="bmiLabel" Content="Your BMI is: " HorizontalAlignment="Left" Margin="223,188,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="showBMI" Content="" HorizontalAlignment="Left" Margin="332,188,0,0" VerticalAlignment="Top" Width="65"/>
 
     </Grid>
 </Window>
